--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,12 +16,12 @@
                placeholder="password">
     </div>
     <div class="d-flex justify-content-between mb-3">
-        <button type="button" class="btn btn-primary">
+        <button (click)="login()" type="button" class="btn btn-primary">
             <em class="fas fa-sign-in-alt">&nbsp; Sign in</em>
         </button>
         <div>
             Don't have an account ? &nbsp;
-            <button type="button" class="btn btn-link">
+            <button (click)="register()" type="button" class="btn btn-link">
                 <em class="fas fa-sign-in-alt">&nbsp; Register</em>
             </button>
         </div>
