--- a/src/app/modules/book/pages/book-list/book-list.component.html
+++ b/src/app/modules/book/pages/book-list/book-list.component.html
@@ -1,5 +1,74 @@
 <h3>Books list</h3>
 <hr>
 <div class="d-flex justify-content-start gap-2 flex-wrap">
-  <app-book-card *ngFor="let book of bookResponse.content" [book]="book"></app-book-card>
+  <app-book-card
+    *ngFor="let book of bookResponse.content"
+    [book]="book"
+  ></app-book-card>
+</div>
+<div class="d-flex justify-content-center mt-3">
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item">
+        <a
+          (click)="goToFirsPage()"
+          [class.disabled]="bookResponse.first"
+          aria-label="Previous"
+          class="page-link"
+          href="javascript:void(0)"
+        >
+          <i class="fa-solid fa-angles-left"></i>
+        </a>
+      </li>
+      <li class="page-item">
+        <a
+          (click)="goToPreviousPage()"
+          [class.disabled]="bookResponse.first"
+          aria-label="Previous"
+          class="page-link"
+          href="javascript:void(0)"
+        >
+          <i class="fa-solid fa-angle-left"></i>
+        </a>
+      </li>
+
+      <li *ngFor="let _ of [].constructor(bookResponse.totalPages); let pageIndex = index"
+          class="page-item"
+      >
+        <a
+          (click)="goToPage(pageIndex)"
+          [class.active]="page == pageIndex"
+          aria-label="Previous"
+          class="page-link"
+          href="javascript:void(0)"
+        >
+          {{ pageIndex + 1 }}
+        </a>
+      </li>
+
+      <li class="page-item">
+        <a
+          (click)="goToNextPage()"
+          [class.disabled]="bookResponse.last"
+          aria-label="Next"
+          class="page-link"
+          href="javascript:void(0)"
+        >
+          <i class="fa-solid fa-chevron-right"></i>
+        </a>
+      </li>
+      <li class="page-item">
+        <a
+          (click)="goToLastPage()"
+          [class.disabled]="bookResponse.last"
+          aria-label="Previous"
+          class="page-link"
+          href="javascript:void(0)"
+        >
+          <i class="fa-solid fa-angles-right"></i>
+        </a>
+      </li>
+    </ul>
+
+  </nav>
 </div>
