--- a/src/app/modules/book/pages/book-list/book-list.component.html
+++ b/src/app/modules/book/pages/book-list/book-list.component.html
@@ -1,5 +1,17 @@
 <h3>Books list</h3>
 <hr>
 <div class="d-flex justify-content-start gap-2 flex-wrap">
-  <app-book-card *ngFor="let book of bookResponse.content" [book]="book"></app-book-card>
+  <app-book-card
+    *ngFor="let book of bookResponse.content"
+    [book]="book"
+  ></app-book-card>
+</div>
+<div class="d-flex justify-content-center mt-3">
+  <app-pagination
+    [page]="page"
+    [totalPages]="bookResponse.totalPages"
+    [first]="bookResponse.first"
+    [last]="bookResponse.last"
+    (pageChange)="onPageChange($event)"
+  ></app-pagination>
 </div>
