--- a/src/app/modules/book/components/book-card/book-card.component.html
+++ b/src/app/modules/book/components/book-card/book-card.component.html
@@ -1,8 +1,8 @@
 <div
   class="card border-2"
   style="width: 20rem;"
-  [class.border-success]="book.shareable"
-  [class.border-warning]="book.archived"
+  [class.border-success]="isManager && book.shareable"
+  [class.border-warning]="isManager && book.archived"
 >
   <img [src]="bookCover" alt="..." class="card-img-top" height="200">
   <div class="card-body overflow-scroll">
