--- a/src/app/modules/book/components/menu/menu.component.html
+++ b/src/app/modules/book/components/menu/menu.component.html
@@ -32,7 +32,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="borrowed-books">
+          <a class="nav-link" aria-current="page" routerLink="my-borrowed-books">
             <i class="fas fa-registered"></i>&nbsp;Borrowed books
           </a>
         </li>
