feat(menu): display username dynamically from JWT token
- Decode JWT token stored in localStorage to retrieve user information
- Display user's name dynamically in the menu
- Handle fallback in case the token is missing or invalid
- Updated HTML to show 'Guest' if no user information is available

--- a/src/app/modules/book/components/menu/menu.component.html
+++ b/src/app/modules/book/components/menu/menu.component.html
@@ -42,12 +42,14 @@
         <button class="btn btn-outline-success" type="submit">
           <i class="fas fa-search"></i>
         </button>
+      </form>
+      <div class="ms-3">
         <span>Welcome</span>
-        <span class="text-capitalize fw-bold">fatah</span>
+        <span class="text-capitalize fw-bold">{{ userName || 'Guest' }}</span>
         <button class="btn btn-link" type="button" (click)="logout()">
           <i class="fas fa-door-open"></i>
         </button>
-      </form>
+      </div>
     </div>
   </div>
 </nav>
